--- a/biblio.bib
+++ b/biblio.bib
@@ -67,6 +67,13 @@
     note = {accessed: 2017-12}
 }
 
+@article{Tuning,
+    author = {Jasper Snoek, Hugo Larochelle, Ryan P. Adams},
+    title = {Practical Bayesian Optimization of Machine Learning Algorithms},
+    year = {2012}
+}
+
+
 @misc{stanfordLogistic,
     author = {A. Ng, J. Ngiam, C-Y. Foo, Y. Mai, C. Suen, A. Coates, A. Maas, A. Hannun, B. Huval, T. Wang, S. Tandon},
     title = {Stanford Deep Learning courses},
