--- a/p_intro.tex
+++ b/p_intro.tex
@@ -31,7 +31,7 @@ This cascades in a series of problems that handicap manufacturers, retailers and
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.35]{./images/introduction/without_alk.png}
-%\caption{}
+\caption{Information exchanges between retail actors without Alkemics}
 \end{figure}
 
 
@@ -56,7 +56,7 @@ Alkemics solution to these challenges is a plateform that enables:
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.35]{./images/introduction/with_alk.png}
-%\caption{Alkemics plateform}
+\caption{Information exchanges between retail actors with Alkemics}
 \end{figure}
 
 
